--- a/week_5-B.Rmd
+++ b/week_5-B.Rmd
@@ -76,8 +76,6 @@ cov_mat <- diag(states$std_dev) %*%
   as.matrix(cor_mat, .name_repair = "minimal") %*% 
   diag(states$std_dev)
 
-
-
 # Think about how you might want to improve this code. Note that the function
 # fails to pass in the necessary variables. For example, it needs an object
 # named cov_mat, otherwise it will fail. Right now, it just assumes that that
@@ -117,12 +115,27 @@ Finally, use `geom_density` to plot the distributions of two states of your choi
 
 **You should do this in steps. First, create the `draws` object. Second, try to successfully change the format of the dataset. Don't do everything all at once in one long section with many pipes!!**
 
+```{r sc1}
+
+simulate_election(100) %>%
+  pivot_longer(cols = 1:51, names_to = "state", values_to = "trump_share") %>%
+  filter(state == "Pennsylvania" | state == "Florida") %>%
+  ggplot(aes(x = trump_share)) + 
+    geom_density() + 
+    facet_wrap(~state)
+  
+```
 
   
 ## Scene 2: Estimating Results from a Single State
 
 In Scene 1, we called this election simulation function a single time. Now, create a new `tibble` called `elections` with one column, `simulations`, that simulates one election in each of 1000 rows. Finally, use this `elections` object to create a column called `pa_win` that uses a `map` function to figure out whether Trump wins Pennsylvania in each of these simulated elections. Once you've verified that works, take the average of the `pa_win` column to see how likely Trump is to win Pennsylvania across all of these simulations.
 
+```{r sc2}
+elections <- tibble(simulations = map(rep(1, 1000), simulate_election)) %>%
+  mutate(pa_win = map_lgl(simulations, ~.$Pennsylvania > 50)) %>%
+  summarize(pa_avg = mean(pa_win))
+```
 
 
 ## Scene 3: Do it again!
